project4_ws/log/build_2023-11-27_12-42-37/project4/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/samuel/ros2_humble/CSCE452-samuel.fafel/project4_ws/install/project4/lib/python3.10/site-packages/project4/simulator.py", line 275
    for corner in unique_corners()
                                  ^
SyntaxError: expected ':'

